# wasm-composition

./: CMakeLists.txt  README.md
src/: a.cpp  b.cpp  export_import.cpp  external_call.cpp  external_call_a.cpp  host.cpp
